# chatbot-knowledge-preparation-system

./: .gitignore  AWS_Infrastructure_Setup_Guide.md  CLAUDE.md  LICENSE  README.md  SETUP.md  docker-compose.yml  kps.sh
.github/workflows/: deploy.yml
app/: .dockerignore  .env.example  Dockerfile  composer.json  package-lock.json
app/bootstrap/: app.php
app/config/: app.php  filesystems.php  logging.php  services.php
app/public/: widget.js
app/routes/: api.php  web.php
docs/adr/: ADR_0005_SQS_DB_Polling.md  ADR_0006_Bedrock_Provider.md  ADR_0007_Job_Chain_over_StepFunctions.md
docs/archive/: CTO_Implementation_Review_Report.md  CTO_Infrastructure_Decision_Response.md  CTO_Phase0_Completion_Approval_Phase1_Start.md  CTO_Phase1_Completion_Approval_Phase2_Start.md  CTO_Phase1_Plan_Approval.md  CTO_Phase2_Completion_Approval_Phase3_Start.md  CTO_Phase2_Plan_Approval.md  (+12 more)
infra/: cloudwatch-alarms.json  ecs-task-worker.json  init-db.sql  s3-lifecycle.json
scripts/: deploy.sh  smoke_test.sh
terraform/: backend.tf  locals.tf  main.tf  outputs.tf  provider.tf  variables.tf  versions.tf
worker/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
worker/src/: __init__.py  backfill_embedding_cache.py  bedrock_client.py  bedrock_llm_client.py  config.py  db.py  embedding_client.py  main.py  metrics.py  parameter_search_advisor.py  s3_helpers.py  step_chain.py  target_scoring.py
worker/src/steps/: __init__.py  cluster_analysis.py  clustering.py  embedding.py  knowledge_unit_generation.py  parameter_search.py  ping.py  preprocess.py
(+285 files in other folders)
