[project]
name = "knowledge-prep-worker"
version = "0.1.0"
description = "Python Data Plane worker for the Knowledge Preparation System"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.35.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8.0",
]

# Phase 1 dependencies (not needed for Phase 0)
# ml = [
#     "numpy>=2.0",
#     "pandas>=2.2",
#     "hdbscan>=0.8.40",
#     "scikit-learn>=1.5",
# ]

[tool.ruff]
line-length = 100
target-version = "py312"
